--- a/index.html
+++ b/index.html
@@ -1,129 +1,159 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Lustige Schul-Website</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    background-color: #c41616;
-    transition: background-color 0.5s;
-  }
-  h1 { color: #333; }
-  button {
-    margin: 10px;
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 8px;
-    background-color: #191e19;
-    color: white;
-    cursor: pointer;
-  }
-  button:hover { background-color: #272a27; }
-  #joke {
-    margin: 20px auto;
-    font-size: 18px;
-    width: 80%;
-    min-height: 40px;
-  }
-  #emoji {
-    font-size: 50px;
-    cursor: pointer;
-    transition: transform 0.3s;
-  }
-</style>
+    <meta charset="UTF-8">
+    <title>Kontakt & Socials</title>
+
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+    <style>
+        :root {
+            --red-main: #c1121f;
+            --red-light: #f5b7b1;
+            --bg-dark: #0f0f0f;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Orbitron', sans-serif;
+            background: linear-gradient(180deg, #0f0f0f, #1a0000);
+            color: white;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: auto;
+            padding: 3rem 1.5rem;
+
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+        }
+
+        header {
+            text-align: center;
+        }
+
+        header h1 {
+            color: var(--red-light);
+            letter-spacing: 3px;
+            margin-bottom: 0.5rem;
+        }
+
+        header p {
+            opacity: 0.8;
+            font-size: 0.9rem;
+        }
+
+        .contact {
+            display: flex;
+            align-items: center;
+            gap: 1.5rem;
+
+            padding: 1.5rem;
+            border: 2px solid var(--red-main);
+            border-radius: 14px;
+            background: rgba(193, 18, 31, 0.15);
+
+            transition: background 0.2s ease;
+            text-decoration: none;
+            color: white;
+        }
+
+        .contact:hover {
+            background: rgba(193, 18, 31, 0.3);
+        }
+
+        .contact i {
+            font-size: 2.5rem;
+            color: var(--red-light);
+            min-width: 45px;
+            text-align: center;
+        }
+
+        .contact-text h2 {
+            font-size: 1.1rem;
+            margin-bottom: 0.3rem;
+        }
+
+        .contact-text p {
+            font-size: 0.8rem;
+            opacity: 0.85;
+            line-height: 1.4;
+        }
+
+        footer {
+            text-align: center;
+            font-size: 0.75rem;
+            opacity: 0.6;
+            margin-top: 2rem;
+        }
+    </style>
 </head>
-
-<style type="text/css">
-
-    .box
-    {
-        width: 40%;
-        background-color: red;
-        padding: 100px;
-        margin: 100px;
-        border: 50px black;
-        width: 100px;
-        height: 100px;
-    }
-</style>
 
 <body>
 
-<h1> 👺 Weclome to xSweaty Website!</h1>
-<p id="joke">Drücke den Knopf für einen trash joke!</p>
+<div class="container">
 
-<button onclick="showJoke()">Neuer Witz</button>
-<button onclick="changeColor()">Farbe ändern</button>
-<button onclick="confetti()">Bling!</button>
+    <header>
+        <h1>MEINE KONTAKTE</h1>
+        <p>Erreiche mich auf diesen Plattformen</p>
+    </header>
 
-<div id="emoji" onclick="dance()">🎬</div>
+    <a class="contact" href="https://youtube.com/@x_Sweat_x" target="_blank">
+        <i class="fa-brands fa-youtube"></i>
+        <div class="contact-text">
+            <h2>YouTube</h2>
+            <p>
+                Videos zu Gaming, Technik und Webprojekten.
+            </p>
+        </div>
+    </a>
 
-<div class="box"></div>
-<p>
-    
-   Margin und Padding feld zum ausprobieren.
+    <a class="contact" href="https://twitch.tv/xSweat_live" target="_blank">
+        <i class="fa-brands fa-twitch"></i>
+        <div class="contact-text">
+            <h2>Twitch</h2>
+            <p>
+                Live-Streams mit Viewers, Gaming und Community-Chat.
+            </p>
+        </div>
+    </a>
 
-</p>
+    <a class="contact" href="https://discord.gg/F4AsBX3nbu" target="_blank">
+        <i class="fa-brands fa-discord"></i>
+        <div class="contact-text">
+            <h2>Discord</h2>
+            <p>
+                Community-Server für Austausch, Fragen und gemeinsame Projekte.
+            </p>
+        </div>
+    </a>
 
-<script>
-const jokes = [
-  "Warum können Geister so schlecht lügen? – Weil man durch sie hindurchsieht!",
-  "Was macht ein Keks unter einem Baum? – Krümel!",
-  "Ich habe heute nichts geschafft – das war anstrengend!",
-  "Warum ging der Pilz auf die Party? – Weil er ein Champignon war!"
-];
+    <a class="contact" href="https://wa.me/1234567890" target="_blank">
+        <i class="fa-brands fa-whatsapp"></i>
+        <div class="contact-text">
+            <h2>WhatsApp</h2>
+            <p>
+                Direkter Kontakt für schnelle Fragen oder Absprachen.
+            </p>
+        </div>
+    </a>
 
-function showJoke() {
-  const j = jokes[Math.floor(Math.random() * jokes.length)];
-  document.getElementById("joke").textContent = j;
-}
+    <footer>
+        © 2026 • x_Sweat_x
+    </footer>
 
-function changeColor() {
-  const colors = ["#FF0000","#baffc9","#bae1ff","#ffffba","#ffdfba"];
-  document.body.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
-}
+</div>
 
-function dance() {
-  const e = document.getElementById("emoji");
-  e.style.transform = "rotate(20deg) scale(1.2)";
-  setTimeout(() => e.style.transform = "rotate(0) scale(1)", 300);
-  
-  // Secret Feature: 5 Klicks in kurzer Zeit öffnen YouTube
-  secretClick();
-}
-
-function confetti() {
-  for (let i = 0; i < 40; i++) {
-    const piece = document.createElement("div");
-    piece.textContent = "🎉";
-    piece.style.position = "fixed";
-    piece.style.left = Math.random() * 100 + "vw";
-    piece.style.top = "-20px";
-    piece.style.fontSize = "24px";
-    piece.style.animation = "fall 5s linear";
-    document.body.appendChild(piece);
-    setTimeout(() => piece.remove(), 2000);
-  }
-}
-
-/* ---- SECRET FEATURE ---- */
-let clickCount = 0;
-let clickTimer;
-function secretClick() {
-  clickCount++;
-  clearTimeout(clickTimer);
-  clickTimer = setTimeout(() => clickCount = 0, 1000); // zurücksetzen nach 1s
-  if (clickCount >= 5) {
-    window.open("https://www.youtube.com/@x_Sweat_x", "_blank");
-    clickCount = 0;
-  }
-}
-</script>
-
-<style>
-@keyframes fall {
-  to { transform
+</body>
+</html>
